--- a/js/index.html
+++ b/js/index.html
@@ -33,6 +33,26 @@
                 </nav>
             </div>
         </header>
+        <main class="main">
+            <div class="projectHome _container">
+                <div class="main_name">
+                    <div class="main_project_inf">
+                        <div class="main_name_project">PROJECT</div>
+                        <div class="main_name_home">HOME</div>
+                    </div>    
+                    <div class="main_arrows">
+                        <div class="main_arrow_right"><img src="../img/Frame 8.png"></div>
+                        <div class="main_arrow_left"><img src="../img/Frame 9.png"></div>
+                    </div>
+                    <div class="maun_numbers">
+                        <div class="main_num_01">01</div>
+                        <div class="main_num_02">02</div>
+                    </div>
+                </div>
+                <div class="main_pic"><img src="../img/Rectangle 6.png"></div>
+            </div>
+        </main>
+        <footer class="footer">я подвал</footer>
     </div>
 </body>
 </html>
